<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".start">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/motto"
        android:fontFamily="@font/ewert"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:layout_marginBottom="50dp"/>

    <TextView
        android:id="@+id/motto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/motto"
        android:textAlignment="center"
        android:textColor="@color/white" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="40dp"
        android:layout_centerHorizontal="true"
        >
        <Button
            android:id="@+id/loginButton"
            android:layout_height="wrap_content"
            android:text="@string/LOGIN"
            android:layout_width="100dp"
            android:background="@drawable/en_bg"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:textColor="@color/blue"
           />
        <Button
            android:layout_toRightOf="@+id/loginButton"
            android:id="@+id/registerButton"
            android:text="@string/REGISTER"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/en_bg"
            android:padding="10dp"
            android:layout_margin="20dp"
            android:textColor="@color/blue"
            />
    </RelativeLayout>




</RelativeLayout>