<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">
 <RelativeLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     >

     <ImageView
         android:id="@+id/pic1"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:src="@drawable/noimage"/>

     <TextView
         android:id="@+id/textView151"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/pic1"
         android:fontFamily="@font/open_sans_bold"
         android:paddingLeft="30dp"
         android:paddingBottom="5dp"
         android:text="@string/named"
         android:textSize="20sp" />

     <TextView
         android:id="@+id/textView161"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView171"
         android:layout_toRightOf="@+id/pic1"
         android:fontFamily="@font/open_sans_light"
         android:paddingLeft="30dp"

         android:text="@string/dod"
         android:textSize="10sp" />

    <TextView
        android:id="@+id/textView171"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/pic1"
        android:layout_below="@+id/textView151"
        android:fontFamily="@font/open_sans"
        android:text="@string/dob"
        android:textSize="15sp"
        android:maxLines="2"
        android:paddingBottom="10dp"
        android:paddingLeft="30dp"/>

     <Button
         android:id="@+id/obidelte"
         android:layout_width="57dp"
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:background="@android:drawable/ic_menu_delete" />



 </RelativeLayout>
</android.support.v7.widget.CardView>